--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,7 @@
         </div>
 
         <!-- 도서검색결과 -->
+        <h1>Home...</h1>
         <div id = "div_books" class="row"></div>
         <!-- 페이지 이동 버튼 -->
         <div class="text-center">
