--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -30,11 +30,14 @@
     <table class="table table-striped">
         {{#each documents}}
             <tr>
+                <!-- 변수명 찍을때 중괄호 두개  -->
                 <td><img src="{{check thumbnail}}" width="50"></td>
                 <td>{{title}}</td>
                 <td>{{format price}}</td>
                 <td>{{authors}}</td>
+                <td><button class="btn btn-primary" index="{{@index}}">도서정보</button></td>
             </tr>
+            <%-include('modal.ejs')%>
         {{/each}}
     </table>
 </script>
@@ -59,6 +62,12 @@
 
     // 만든 사용자함수 호출
     getBooks();
+
+    // 도서정보 버튼을 눌렀을때
+    $("#div_books").on("click", ".btn-primary", function(){
+        let index = $(this).attr("index");
+        $("#modal"+index).modal("show");
+    });
 
     // name 을 가진 객체를 선택할때는 따로 붙는 기호가 없다. id=#
     $(frm).on("submit", function(e){
