--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title><%= title %></title>
-    <!-- PUBLIC 폴더에 있는 CSS파일의 내용을 수정하여 사용한다. -->
+    <!-- PUBLIC 폴더에 있는 CSS파일의 내용을 수정하여 사용한다. /경로를 바로 사용한다. -->
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- 부트스트랩 CDN 링크 참조 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9ac7014719f5699c486c06628b562810"></script>
   </head>
   <body>
     <!-- title 은 index.js에서 정의한 변수의 값을 의미한다. -->
