--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,14 @@
     #div_books img {
         cursor: pointer;
     }
+    #div_books .bi-cart-check{
+        /* 선택자를 .bi, .i 로 해도 선택가능 */
+        cursor : pointer;
+        color : green;
+        font-size : 1.5rem;
+    }
 </style>
+
 <div class="row my-5">
     <div class="col">
         <!-- 검색폼 -->
@@ -46,6 +53,7 @@
                 </div>
                 <div class="card-footer style="font_size:1.1rem;">
                     {{format price}}
+                    <i class="bi bi-cart-check float-end" book="{{book @this}}"></i>
                 </div>
             </div>
         </div>
@@ -65,6 +73,11 @@
     Handlebars.registerHelper("format",function(price){
         return price.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + '원';
     });
+
+    // book object를 string으로 변환해주는 함수 정의
+    Handlebars.registerHelper("book",function(book){
+        return JSON.stringify(book);
+    });
 </script>
 <script>
     // frm의 query 의 값을 전역변수 query에 담는다.
@@ -73,6 +86,19 @@
 
     // 만든 사용자함수 호출
     getBooks();
+
+    // 장바구니를 클릭한 경우
+    $("#div_books").on("click",".bi-cart-check",function(){
+        if(!sessionStorage.getItem("email")){
+            // 비로그인 상태일시 로그인 폼으로 이동
+            location.href = "/users/login";
+        }else{
+            // 장바구니에 등록
+            // string 형식의 값을 json.parse 를 통해 다시 오브젝트 형태로 변환하여 출력한다.
+            const book = JSON.parse($(this).attr("book"));
+            console.log(book);
+        }
+    });
 
     // 이미지를 클릭한 경우
     $("#div_books").on("click", "img", function(){
