--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,7 +53,7 @@
                 </div>
                 <div class="card-footer style="font_size:1.1rem;">
                     {{format price}}
-                    <i class="bi bi-cart-check float-end" book="{{book @this}}"></i>
+                    <i class="cart bi bi-cart-check float-end" book="{{book @this}}"></i>
                 </div>
             </div>
         </div>
@@ -79,7 +79,11 @@
         return JSON.stringify(book);
     });
 </script>
-<script>
+<script type="module">
+    import { app } from "/javascripts/firebase.js";
+    import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js";
+    // app 중간고사 언급 ★
+    const db = getDatabase(app);
     // frm의 query 의 값을 전역변수 query에 담는다.
     let query=$(frm.query).val();
     let page=1;
@@ -87,18 +91,41 @@
     // 만든 사용자함수 호출
     getBooks();
 
-    // 장바구니를 클릭한 경우
-    $("#div_books").on("click",".bi-cart-check",function(){
-        if(!sessionStorage.getItem("email")){
-            // 비로그인 상태일시 로그인 폼으로 이동
+    // 장바구니를 클릭한 경우 (fire database 사용)
+    $("#div_books").on("click",".cart", async function(){
+        // 흰색 스크립트의 앞부분 book을 가져와야한다. <중간고사 언급>
+        if(!sessionStorage.getItem("uid")){
             location.href = "/users/login";
-        }else{
-            // 장바구니에 등록
-            // string 형식의 값을 json.parse 를 통해 다시 오브젝트 형태로 변환하여 출력한다.
-            const book = JSON.parse($(this).attr("book"));
-            console.log(book);
+            return;
+        }
+        // 장바구니에 있는지 체크
+        const book=JSON.parse($(this).attr("book"));
+        // console.log(book);
+        const ref_cart = ref(db,`cart/${sessionStorage.getItem("uid")}/${book.isbn}`);
+        const result = await get(ref_cart);
+        // console.log(result.val());
+        if(result.val()){
+            alert("이미 장바구니에 있는 상품입니다.")
+        }
+        else{
+            if(!confirm("장바구니에 담으시겠습니까?")) return;
+            set(ref_cart, book);
+            alert("장바구니에 추가되었습니다.");
         }
     });
+
+    // 장바구니를 클릭한 경우
+    // $("#div_books").on("click",".bi-cart-check",function(){
+    //     if(!sessionStorage.getItem("email")){
+    //         // 비로그인 상태일시 로그인 폼으로 이동
+    //         location.href = "/users/login";
+    //     }else{
+    //         // 장바구니에 등록
+    //         // string 형식의 값을 json.parse 를 통해 다시 오브젝트 형태로 변환하여 출력한다.
+    //         const book = JSON.parse($(this).attr("book"));
+    //         console.log(book);
+    //     }
+    // });
 
     // 이미지를 클릭한 경우
     $("#div_books").on("click", "img", function(){
