--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -25,6 +25,7 @@
 </div>
 <script type="module">
     // public 이 루트 폴더
+    // app , auth 빈칸 언급
     import { app } from "/javascripts/firebase.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js";
     const auth = getAuth(app);
