--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -20,6 +20,9 @@
           <li class="nav-item" id="cart" style="display: none;">
             <a class="nav-link active" aria-current="page" href="/books/cart">장바구니</a>
           </li>
+          <li class="nav-item" id="favorite" style="display: none;">
+            <a class="nav-link active" aria-current="page" href="/locals/favorite">즐겨찾기</a>
+          </li>
         </ul>
         <ul class="navbar-nav d-flex">
             <li class="nav-item" id="login">
@@ -43,7 +46,7 @@
   <script>
     if(sessionStorage.getItem("email")){
       // 로그인, 이메일, 로그아웃의 객체 시각상태를 반전한다.
-      $("#login, #email, #logout, #cart").toggle();
+      $("#login, #email, #logout, #cart, #favorite").toggle();
       $("#email a").html(sessionStorage.getItem("email"));
     }
 
