--- a/views/posts/comments.ejs
+++ b/views/posts/comments.ejs
@@ -15,6 +15,7 @@
         </div>
     </div>
     <div id="div_comments"></div>
+    <div id="pagination" class="pagination justify-content-center mt-5"></div>
 </div>
 <script id="temp_comments" type="x-handlebars-template">
     {{#each .}}
@@ -23,12 +24,24 @@
                 <small><b>{{email}}</b></small>
                 <small>{{date}}</small>
             </div>
-            <div>{{body}}</div>
         </div>
-        <div class="text-end" style="{{fn_button email}}">
-            <button class="btn btn-success btn-sm">수정</button>
-            <button class="btn btn-danger btn-sm">삭제</button>
+
+    <div class="view{{id}}">
+        <div class="ellipsis2 body">{{body}}</div>
+        <div class="text-end mt-2" style="{{fn_button email}}">
+            <button class="btn-update btn btn-success btn-sm" id = {{id}}>수정</button>
+            <button class="btn-delete btn btn-danger btn-sm" id = "{{id}}">삭제</button>
         </div>
+    </div>
+
+    <div class="edit{{id}}" style="display:none;">
+        <div><textarea class="body form-control" rows="5">{{body}}</textarea></div>
+        <div class="text-end mt-2" style="{{fn_button email}}">
+            <button class="btn-save btn btn-success btn-sm" id={{id}}>저장</button>
+            <button class="btn-cancel btn btn-danger btn-sm" id="{{id}}">취소</button>
+        </div>
+    </div>
+
         <hr>
     {{/each}}
 </script>
@@ -43,9 +56,57 @@
 <script type="module">
     import { app } from "/javascripts/firebase.js";
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
-    import { query,orderBy,getDocs,where,doc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
+    import { query,orderBy,getDocs,where,doc, deleteDoc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
     const db = getFirestore(app);
     const pid = "<%=id%>";
+    let total = 0;
+    const size = 3;
+    let page = 1;
+
+    // body 를 클릭한 경우
+    $("#div_comments").on("click", ".body" , async function(){
+        $(this).toggleClass("ellipsis2");
+    });
+    // 저장버튼 클릭 시
+    $("#div_comments").on("click", ".btn-save" , async function(){
+        const id = $(this).attr("id");
+        const edit = $(this).parent().parent();
+        const body = edit.find(".body").val();
+
+        if(confirm("수정하시겠습니까?")){
+            const snapshot = await getDoc(doc(db,`comments/${id}`));
+            //console.log(snapshot.data());
+            // 원래의 데이터를 snapshot.data 에서 body 만 수정
+            setDoc(doc(db,`comments/${id}`), {...snapshot.data(), body});
+            alert("수정완료");
+            getComments();
+        }
+    });
+
+
+    // 수정버튼 클릭 시
+    $("#div_comments").on("click", ".btn-update" , async function(){
+        const id = $(this).attr("id");
+        $("#div_comments .view" + id).hide();
+        $("#div_comments .edit" + id).show();
+    });
+
+    // 취소버튼 클릭 시
+    $("#div_comments").on("click", ".btn-cancel" , async function(){
+        const id = $(this).attr("id");
+        $("#div_comments .view" + id).show();
+        $("#div_comments .edit" + id).hide();
+    });
+
+    // 삭제버튼 클릭 시 
+    $("#div_comments").on("click", ".btn-delete" , async function(){
+        const id = $(this).attr("id");
+        if(confirm("삭제하시겠습니까?")){
+             await deleteDoc(doc(db, `/comments/${id}`));
+             alert("삭제가 완료되었습니다.");
+        }
+        getComments();
+    });
 
     if(sessionStorage.getItem("email")){
         $("#div_insert, #div_login").toggle();
@@ -77,16 +138,45 @@
     async function getComments(){
         const q= query(collection(db,`comments`), where("pid","==",pid), orderBy('date','desc'));
         const snapshot = await getDocs(q);
-        const total = snapshot.docs.length;
+        //const total = snapshot.docs.length;
+
+                // 전체 페이지수 구하기
+        if(total != snapshot.docs.length){
+            total = snapshot.docs.length;
+            const totalPages=Math.ceil(total/size);
+            $("#pagination").twbsPagination("changeTotalPages", totalPages, 1);
+        }
+
         $("#total").html(total);
         let rows = [];
-        snapshot.docs.forEach(doc=>{
-            const data = {id:doc.id, ...doc.data()}
-            //console.log(data)
-            rows.push(data);
+
+        snapshot.docs.forEach((doc, index)=>{
+            const start = (page-1) * size; // page = 1 일때  0
+            const end = (page * size) -1; // page = 1 일때  2
+            if(index>=start && index<=end){
+                const data = {id:doc.id, ...doc.data()}
+                //console.log(data)
+                rows.push(data);
+            }
         });
         console.log(rows);
         const temp = Handlebars.compile($("#temp_comments").html());
         $("#div_comments").html(temp(rows));
     }
+
+    $('#pagination').twbsPagination({
+
+        totalPages:10, //총 페이지 번호 수
+        visiblePages: 5, // 하단에서 한 번에 보여 지는 페이지 번호 수
+        startPage : 1, // 시작 시 표시되는 현재 페이지
+        initiateStartPageClick: false, // 플러그인이 시작 시 페이지 버튼 클릭 여부 (default : true) 
+        first : '<<', // 페이지네이션 버튼 중 처음으로 돌아가는 버튼에 쓰여 있는 텍스트
+        prev : '<', // 이전 페이지 버튼에 쓰여 있는 텍스트
+        next : '>', // 다음 페이지 버튼에 쓰여 있는 텍스트
+        last : '>>', // 페이지네이션 버튼 중 마지막으로 가는 버튼에 쓰여 있는 텍스트
+        onPageClick: function (event, clickPage) {
+            page=clickPage;
+            getComments();
+        }
+});
 </script>
